--- a/docs/5_save_loading_model_controller.ipynb
+++ b/docs/5_save_loading_model_controller.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:55.761857Z",
-     "iopub.status.busy": "2023-03-10T09:15:55.761700Z",
-     "iopub.status.idle": "2023-03-10T09:15:57.038180Z",
-     "shell.execute_reply": "2023-03-10T09:15:57.037629Z"
+     "iopub.execute_input": "2023-03-22T12:28:46.361399Z",
+     "iopub.status.busy": "2023-03-22T12:28:46.360968Z",
+     "iopub.status.idle": "2023-03-22T12:28:47.452927Z",
+     "shell.execute_reply": "2023-03-22T12:28:47.452460Z"
     }
    },
    "outputs": [
@@ -25,18 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
-      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/chain_control/lib/python3.10/site-packages/flax/core/frozen_dict.py:169: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(\n",
+      "/Users/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:6: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
     }
@@ -55,10 +46,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:57.041180Z",
-     "iopub.status.busy": "2023-03-10T09:15:57.040569Z",
-     "iopub.status.idle": "2023-03-10T09:15:57.188145Z",
-     "shell.execute_reply": "2023-03-10T09:15:57.187662Z"
+     "iopub.execute_input": "2023-03-22T12:28:47.454963Z",
+     "iopub.status.busy": "2023-03-22T12:28:47.454797Z",
+     "iopub.status.idle": "2023-03-22T12:28:47.523226Z",
+     "shell.execute_reply": "2023-03-22T12:28:47.522857Z"
     }
    },
    "outputs": [],
@@ -79,10 +70,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:57.190332Z",
-     "iopub.status.busy": "2023-03-10T09:15:57.190163Z",
-     "iopub.status.idle": "2023-03-10T09:15:58.021098Z",
-     "shell.execute_reply": "2023-03-10T09:15:58.020589Z"
+     "iopub.execute_input": "2023-03-22T12:28:47.524791Z",
+     "iopub.status.busy": "2023-03-22T12:28:47.524708Z",
+     "iopub.status.idle": "2023-03-22T12:28:47.898507Z",
+     "shell.execute_reply": "2023-03-22T12:28:47.898088Z"
     }
    },
    "outputs": [],
@@ -105,10 +96,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:58.023634Z",
-     "iopub.status.busy": "2023-03-10T09:15:58.023431Z",
-     "iopub.status.idle": "2023-03-10T09:15:58.209963Z",
-     "shell.execute_reply": "2023-03-10T09:15:58.209473Z"
+     "iopub.execute_input": "2023-03-22T12:28:47.900098Z",
+     "iopub.status.busy": "2023-03-22T12:28:47.900009Z",
+     "iopub.status.idle": "2023-03-22T12:28:48.098671Z",
+     "shell.execute_reply": "2023-03-22T12:28:48.098372Z"
     }
    },
    "outputs": [
@@ -141,10 +132,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:58.211909Z",
-     "iopub.status.busy": "2023-03-10T09:15:58.211742Z",
-     "iopub.status.idle": "2023-03-10T09:15:58.216700Z",
-     "shell.execute_reply": "2023-03-10T09:15:58.216181Z"
+     "iopub.execute_input": "2023-03-22T12:28:48.100244Z",
+     "iopub.status.busy": "2023-03-22T12:28:48.100142Z",
+     "iopub.status.idle": "2023-03-22T12:28:48.103296Z",
+     "shell.execute_reply": "2023-03-22T12:28:48.103078Z"
     }
    },
    "outputs": [],
@@ -164,10 +155,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:58.218699Z",
-     "iopub.status.busy": "2023-03-10T09:15:58.218497Z",
-     "iopub.status.idle": "2023-03-10T09:15:58.223250Z",
-     "shell.execute_reply": "2023-03-10T09:15:58.222896Z"
+     "iopub.execute_input": "2023-03-22T12:28:48.104561Z",
+     "iopub.status.busy": "2023-03-22T12:28:48.104470Z",
+     "iopub.status.idle": "2023-03-22T12:28:48.107544Z",
+     "shell.execute_reply": "2023-03-22T12:28:48.107251Z"
     }
    },
    "outputs": [
@@ -198,10 +189,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:15:58.225072Z",
-     "iopub.status.busy": "2023-03-10T09:15:58.224921Z",
-     "iopub.status.idle": "2023-03-10T09:15:58.240036Z",
-     "shell.execute_reply": "2023-03-10T09:15:58.239564Z"
+     "iopub.execute_input": "2023-03-22T12:28:48.108917Z",
+     "iopub.status.busy": "2023-03-22T12:28:48.108832Z",
+     "iopub.status.idle": "2023-03-22T12:28:48.119715Z",
+     "shell.execute_reply": "2023-03-22T12:28:48.119444Z"
     }
    },
    "outputs": [
@@ -246,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
