--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:00.374219Z",
-     "iopub.status.busy": "2023-03-10T09:10:00.374055Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.057365Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.056851Z"
+     "iopub.execute_input": "2023-03-22T12:26:14.752809Z",
+     "iopub.status.busy": "2023-03-22T12:26:14.752624Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.112802Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.112344Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.059665Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.059429Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.062590Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.062132Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.114953Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.114803Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.117329Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.117026Z"
     }
    },
    "outputs": [],
@@ -135,17 +135,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.064511Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.064273Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.189692Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.189187Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.118862Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.118746Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.178096Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.177824Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f21b4351520>"
+       "<__main__.SegmentPhysics at 0x107893250>"
       ]
      },
      "execution_count": 3,
@@ -182,17 +182,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.217167Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.216969Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.222565Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.222220Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.197646Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.197526Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.201163Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.200884Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f21704dd040>"
+       "<__main__.SegmentTask at 0x145b92650>"
       ]
      },
      "execution_count": 4,
@@ -248,10 +248,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.224263Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.224087Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.343618Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.343198Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.202576Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.202493Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.260844Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.260557Z"
     }
    },
    "outputs": [],
@@ -264,10 +264,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.345782Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.345581Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.349837Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.349516Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.262263Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.262185Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.264749Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.264486Z"
     }
    },
    "outputs": [
@@ -292,10 +292,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.351434Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.351281Z",
-     "iopub.status.idle": "2023-03-10T09:10:01.354948Z",
-     "shell.execute_reply": "2023-03-10T09:10:01.354593Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.266087Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.266007Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.268392Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.268128Z"
     }
    },
    "outputs": [
@@ -328,10 +328,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-10T09:10:01.356620Z",
-     "iopub.status.busy": "2023-03-10T09:10:01.356403Z",
-     "iopub.status.idle": "2023-03-10T09:10:02.130133Z",
-     "shell.execute_reply": "2023-03-10T09:10:02.129483Z"
+     "iopub.execute_input": "2023-03-22T12:26:15.269749Z",
+     "iopub.status.busy": "2023-03-22T12:26:15.269674Z",
+     "iopub.status.idle": "2023-03-22T12:26:15.957348Z",
+     "shell.execute_reply": "2023-03-22T12:26:15.957065Z"
     }
    },
    "outputs": [
@@ -339,18 +339,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/flax/struct.py:136: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(data_clz, keypaths)\n",
-      "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:8: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "/opt/homebrew/Caskroom/miniforge/base/envs/chain_control/lib/python3.10/site-packages/flax/core/frozen_dict.py:169: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+      "  jax.tree_util.register_keypaths(\n",
+      "/Users/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:6: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm\n"
      ]
     }
@@ -390,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
