small bugfixes; changes to isort google style

--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:14.752809Z",
-     "iopub.status.busy": "2023-03-22T12:26:14.752624Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.112802Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.112344Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.067290Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.067038Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.465956Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.465561Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.114953Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.114803Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.117329Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.117026Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.468163Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.468003Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.470547Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.470193Z"
     }
    },
    "outputs": [],
@@ -135,17 +135,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.118862Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.118746Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.178096Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.177824Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.472007Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.471894Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.528129Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.527808Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x107893250>"
+       "<__main__.SegmentPhysics at 0x105477ee0>"
       ]
      },
      "execution_count": 3,
@@ -182,17 +182,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.197646Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.197526Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.201163Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.200884Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.546259Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.546140Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.549853Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.549549Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x145b92650>"
+       "<__main__.SegmentTask at 0x15d590ac0>"
       ]
      },
      "execution_count": 4,
@@ -248,10 +248,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.202576Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.202493Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.260844Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.260557Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.551236Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.551152Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.605520Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.605165Z"
     }
    },
    "outputs": [],
@@ -264,10 +264,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.262263Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.262185Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.264749Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.264486Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.607064Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.606976Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.610423Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.610148Z"
     }
    },
    "outputs": [
@@ -292,10 +292,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.266087Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.266007Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.268392Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.268128Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.611875Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.611777Z",
+     "iopub.status.idle": "2023-09-06T08:18:39.614330Z",
+     "shell.execute_reply": "2023-09-06T08:18:39.614032Z"
     }
    },
    "outputs": [
@@ -328,24 +328,13 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:26:15.269749Z",
-     "iopub.status.busy": "2023-03-22T12:26:15.269674Z",
-     "iopub.status.idle": "2023-03-22T12:26:15.957348Z",
-     "shell.execute_reply": "2023-03-22T12:26:15.957065Z"
+     "iopub.execute_input": "2023-09-06T08:18:39.615820Z",
+     "iopub.status.busy": "2023-09-06T08:18:39.615726Z",
+     "iopub.status.idle": "2023-09-06T08:18:40.129219Z",
+     "shell.execute_reply": "2023-09-06T08:18:40.128788Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/chain_control/lib/python3.10/site-packages/flax/core/frozen_dict.py:169: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(\n",
-      "/Users/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:6: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cc.env.collect import RandomActor\n",
     "from cc.utils.visual.viewer import launch_viewer\n",
@@ -381,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
