--- a/docs/5_save_loading_model_controller.ipynb
+++ b/docs/5_save_loading_model_controller.ipynb
@@ -14,24 +14,13 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:46.361399Z",
-     "iopub.status.busy": "2023-03-22T12:28:46.360968Z",
-     "iopub.status.idle": "2023-03-22T12:28:47.452927Z",
-     "shell.execute_reply": "2023-03-22T12:28:47.452460Z"
+     "iopub.execute_input": "2023-09-06T08:20:59.815452Z",
+     "iopub.status.busy": "2023-09-06T08:20:59.814979Z",
+     "iopub.status.idle": "2023-09-06T08:21:00.732205Z",
+     "shell.execute_reply": "2023-09-06T08:21:00.731687Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/chain_control/lib/python3.10/site-packages/flax/core/frozen_dict.py:169: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
-      "  jax.tree_util.register_keypaths(\n",
-      "/Users/simon/Documents/PYTHON/chain_control/cc/env/collect/collect.py:6: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cc import save, load  \n",
     "from cc.examples.feedforward_controller import make_feedforward_controller\n",
@@ -46,10 +35,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:47.454963Z",
-     "iopub.status.busy": "2023-03-22T12:28:47.454797Z",
-     "iopub.status.idle": "2023-03-22T12:28:47.523226Z",
-     "shell.execute_reply": "2023-03-22T12:28:47.522857Z"
+     "iopub.execute_input": "2023-09-06T08:21:00.734237Z",
+     "iopub.status.busy": "2023-09-06T08:21:00.734076Z",
+     "iopub.status.idle": "2023-09-06T08:21:00.798819Z",
+     "shell.execute_reply": "2023-09-06T08:21:00.798381Z"
     }
    },
    "outputs": [],
@@ -70,10 +59,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:47.524791Z",
-     "iopub.status.busy": "2023-03-22T12:28:47.524708Z",
-     "iopub.status.idle": "2023-03-22T12:28:47.898507Z",
-     "shell.execute_reply": "2023-03-22T12:28:47.898088Z"
+     "iopub.execute_input": "2023-09-06T08:21:00.800482Z",
+     "iopub.status.busy": "2023-09-06T08:21:00.800389Z",
+     "iopub.status.idle": "2023-09-06T08:21:01.178129Z",
+     "shell.execute_reply": "2023-09-06T08:21:01.177710Z"
     }
    },
    "outputs": [],
@@ -96,10 +85,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:47.900098Z",
-     "iopub.status.busy": "2023-03-22T12:28:47.900009Z",
-     "iopub.status.idle": "2023-03-22T12:28:48.098671Z",
-     "shell.execute_reply": "2023-03-22T12:28:48.098372Z"
+     "iopub.execute_input": "2023-09-06T08:21:01.179929Z",
+     "iopub.status.busy": "2023-09-06T08:21:01.179815Z",
+     "iopub.status.idle": "2023-09-06T08:21:01.375441Z",
+     "shell.execute_reply": "2023-09-06T08:21:01.375138Z"
     }
    },
    "outputs": [
@@ -111,7 +100,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontroller\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:40\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 40\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     41\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     43\u001b[0m         )\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     46\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:43\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 43\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     44\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     46\u001b[0m         )\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     49\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
       "\u001b[0;31mException\u001b[0m: Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\n            To de-serialise use `eqx.tree_deserialise_leaves`."
      ]
     }
@@ -132,10 +121,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:48.100244Z",
-     "iopub.status.busy": "2023-03-22T12:28:48.100142Z",
-     "iopub.status.idle": "2023-03-22T12:28:48.103296Z",
-     "shell.execute_reply": "2023-03-22T12:28:48.103078Z"
+     "iopub.execute_input": "2023-09-06T08:21:01.393294Z",
+     "iopub.status.busy": "2023-09-06T08:21:01.393184Z",
+     "iopub.status.idle": "2023-09-06T08:21:01.396426Z",
+     "shell.execute_reply": "2023-09-06T08:21:01.396117Z"
     }
    },
    "outputs": [],
@@ -155,10 +144,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:48.104561Z",
-     "iopub.status.busy": "2023-03-22T12:28:48.104470Z",
-     "iopub.status.idle": "2023-03-22T12:28:48.107544Z",
-     "shell.execute_reply": "2023-03-22T12:28:48.107251Z"
+     "iopub.execute_input": "2023-09-06T08:21:01.397782Z",
+     "iopub.status.busy": "2023-09-06T08:21:01.397700Z",
+     "iopub.status.idle": "2023-09-06T08:21:01.400956Z",
+     "shell.execute_reply": "2023-09-06T08:21:01.400680Z"
     }
    },
    "outputs": [
@@ -189,10 +178,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-22T12:28:48.108917Z",
-     "iopub.status.busy": "2023-03-22T12:28:48.108832Z",
-     "iopub.status.idle": "2023-03-22T12:28:48.119715Z",
-     "shell.execute_reply": "2023-03-22T12:28:48.119444Z"
+     "iopub.execute_input": "2023-09-06T08:21:01.402354Z",
+     "iopub.status.busy": "2023-09-06T08:21:01.402270Z",
+     "iopub.status.idle": "2023-09-06T08:21:01.413339Z",
+     "shell.execute_reply": "2023-09-06T08:21:01.413090Z"
     }
    },
    "outputs": [
@@ -204,7 +193,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:34\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(path):\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m---> 34\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:37\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     35\u001b[0m path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexpanduser(path)\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m---> 37\u001b[0m     obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
       "\u001b[0;31mUnpicklingError\u001b[0m: STACK_GLOBAL requires str"
      ]
     }
@@ -237,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
